# matrix-oracle

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  lints.toml
.github/workflows/: rust-workflow.yml  template-sync.yml
src/: client.rs  error.rs  lib.rs  server.rs
src/client/: error.rs
src/server/: error.rs
