[package]
name = "matrix-oracle"
version = "0.1.1"
description = ".well-known resolver for the matrix protocol"
authors = ["Amanda Graven <amanda@graven.dev"]
readme = "README.md"
repository = "https://gitlab.com/famedly/company/backend/libraries/matrix-oracle"
license = "AGPL-3.0-only"
keywords = ["matrix"]
categories = ["api-bindings"]
edition = "2018"
resolver = "2"

[features]
default = ["native-tls", "client", "server"]
client = ["url"]
server = ["trust-dns-resolver"]
native-tls = ["reqwest/native-tls", "trust-dns-resolver/dns-over-native-tls", "trust-dns-resolver/dnssec-openssl"]
rustls = ["reqwest/rustls-tls", "trust-dns-resolver/dns-over-rustls", "trust-dns-resolver/dnssec-ring"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
reqwest-middleware = "0.1"
reqwest-cache = "0.1"
tracing = "0.1"
trust-dns-resolver = { version = "0.21", optional = true }
url = { version = "2.2", optional = true }

[dev-dependencies]
mockito = "0.31"
tokio = { version = "1.12", features = ["macros"] }
