[package]
name = "matrix-oracle"
version = "0.1.3"
description = ".well-known resolver for the matrix protocol"
authors = ["Amanda Graven <amanda@graven.dev"]
readme = "README.md"
repository = "https://github.com/famedly/matrix-oracle"
license = "AGPL-3.0-only"
keywords = ["matrix"]
categories = ["api-bindings"]
edition = "2018"
resolver = "2"

[features]
default = ["native-tls", "client", "server"]
## Enable client-server well-known resolution
client = ["url"]
## Enable server-server well-known resolution
server = ["trust-dns-resolver"]
## Use openssl for TLS
native-tls = ["reqwest/native-tls", "trust-dns-resolver/dns-over-native-tls", "trust-dns-resolver/dnssec-openssl"]
## Use rustls for TLS
rustls = ["reqwest/rustls-tls", "trust-dns-resolver/dns-over-rustls", "trust-dns-resolver/dnssec-ring"]

[dependencies]
document-features = "0.2"
http-cache-reqwest = { version = "0.13.0", default-features = false, features = ["manager-moka"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
reqwest-middleware = "0.2"
tracing = "0.1"
trust-dns-resolver = { version = "0.22", optional = true }
url = { version = "2.2", optional = true }

[dev-dependencies]
tokio = { version = "1.12", features = ["macros"] }
wiremock = "0.5"

[package.metadata.cargo-udeps.ignore]
normal = ["document-features"]
